--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.1.2",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
